Završeno Testiranje Funkcionalnosti 3

--- a/Zadaca1/Zadaca1.csproj
+++ b/Zadaca1/Zadaca1.csproj
@@ -15,6 +15,9 @@
 	<None Update="XMLFile3.xml">
 		<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	</None>
+	<None Update="XMLFile4.xml">
+	  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	</None>
   </ItemGroup>
 
 </Project>
